samples/_failures_safe/1761392218_f40714_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_025d6618.c: In function ‘main’:
./samples/SAFE/__tmp_025d6618.c:136:9: error: expected declaration or statement at end of input
  136 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_025d6618.c:136:9: error: expected declaration or statement at end of input
